--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "connect-redis",
+  "name": "qcloud-connect-redis",
   "description": "Redis session store for Connect",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "contributors": [
-    "Marc Harter <wavded@gmail.com>"
+    "Marc Harter <wavded@gmail.com>",
+    "miusuncle <miusuncle@gmail.com>"
   ],
   "license": "MIT",
   "main": "./index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:visionmedia/connect-redis.git"
+    "url": "git@github.com:CFETeam/qcloud-connect-redis.git"
   },
   "dependencies": {
     "debug": "^2.2.0",
+    "hashring": "^3.2.0",
     "redis": "^2.1.0"
   },
   "devDependencies": {
@@ -29,7 +31,7 @@
     "node": "*"
   },
   "bugs": {
-    "url": "https://github.com/visionmedia/connect-redis/issues"
+    "url": "https://github.com/CFETeam/qcloud-connect-redis/issues"
   },
   "scripts": {
     "test": "DEBUG=* istanbul cover tape \"test/*-test.js\"",
